docs(api): update swagger documentation for tenant settings :memo:
